# SparseSolver

./: CMakeLists.txt  TODO  pssolver.hpp
python/: solver.py
src/: CMakeLists.txt  LinearSystem.cpp  LinearSystem.hpp  Matrix.cpp  Matrix.hpp
src/device/: CsrMatrixGPU.cu  CsrMatrixGPU.hpp  VectorGPU.cu  VectorGPU.hpp  cuda_kernels_csrmatrix.hpp  cuda_kernels_vector.hpp  utils.h
src/host/: CMakeCache.txt  CsrMatrix.cpp  CsrMatrix.hpp  Vector.cpp  Vector.hpp  auxFuncs.hpp  csrmatrix_kernels.hpp
tests/: CMakeLists.txt  csrmatrixGPUmain.cpp  csrmatrixmain.cpp  devicecg.cpp  hostcg.cpp  matrixmain.cpp  vectorGPUmain.cpp  vectormain.cpp  vectortest.cpp
tests/matrices/: list.txt  matrix.mtx  matrixsym.mtx
